Update LCA script instructions for grid emission data
Clarifies the usage of Electricity Maps datasets by specifying the required column name for carbon intensity and improves formatting for optional instructions.

--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -272,7 +272,9 @@ Life Cycle Analysis:
 
       Outputs include total annual emissions (kgCO₂e/year), emissions intensity (kgCO₂e/m²/year), optional hourly operational emissions (8,760 hours), and projected annual embodied emissions until a target year.
 
-      **Optional**: For location-specific grid emission data, download hourly carbon intensity datasets from [Electricity Maps](https://portal.electricitymaps.com/datasets). Ensure proper citation and compliance with their terms of use.
+      **[Optional]**: For location-specific grid emission data, download hourly carbon intensity datasets from [Electricity Maps](https://portal.electricitymaps.com/datasets), 
+      and set column name to "Carbon intensity gCO₂eq/kWh (direct)" in the parameters.
+      _Ensure proper citation and compliance with their terms of use._
     interfaces: [cli, dashboard]
     module: cea.analysis.lca.main
     parameters: ['general:scenario', emissions]
