change some default settings

--- a/cea/default.config
+++ b/cea/default.config
@@ -372,7 +372,7 @@ use-dynamic-infiltration-calculation.type = BooleanParameter
 use-dynamic-infiltration-calculation.help = True if dynamic infiltration calculations are considered (slower run times!).
 use-dynamic-infiltration-calculation.category = Advanced
 
-overheating-warning = true
+overheating-warning = false
 overheating-warning.type = BooleanParameter
 overheating-warning.help = Set to False to bypass overheating warning.
 overheating-warning.category = Advanced
@@ -1295,7 +1295,7 @@ available-energy-sources.choices = power_grid, fossil_fuels, bio_fuels
 available-energy-sources.help = The energy carriers within these categories are assumed to have limitless supply.
 available-energy-sources.category = Advanced
 
-available-energy-potentials = photovoltaic_panels, photovoltaic_thermal_panels, solar_collectors, geothermal_energy, water_bodies, sewage
+available-energy-potentials = photovoltaic_panels, geothermal_energy, water_bodies, sewage
 available-energy-potentials.type = MultiChoiceParameter
 available-energy-potentials.choices = photovoltaic_panels, photovoltaic_thermal_panels, solar_collectors, geothermal_energy, water_bodies, sewage
 available-energy-potentials.help = Supply system components that can provide electricity to the main heating/cooling components
