--- a/pyproject.toml
+++ b/pyproject.toml
@@ -174,3 +174,4 @@ gdal = "*"
 notebook = "*"
 pixi-pycharm = ">=0.0.8,<0.0.9" # for pycharm support
 uv = "*"
+timezonefinder = ">=8.1.0,<9" # to fix Windows installation due to pyepwmorpher
