Add PV contribution options to emission calculations

--- a/cea/default.config
+++ b/cea/default.config
@@ -398,6 +398,24 @@ buildings.type = BuildingsParameter
 buildings.help = Buildings to include in emission timeline generation.
 buildings.category = Emission Timeline Detailed Settings
 
+consider-pv-contributions = false
+consider-pv-contributions.type = BooleanParameter
+consider-pv-contributions.help = True to include PV contributions in emission calculations.
+consider-pv-contributions.category = Emission Timeline Detailed Settings
+
+pv-type = 
+pv-type.type = ColumnChoiceParameter
+pv-type.help = Type of PV panels to consider for emission calculations. Leave blank to ignore PV contributions.
+    PV panels can help electrical technologies avoid grid electricity consumption, thus reducing emissions caused by grid.
+    However, they might have embodied emissions during manufacturing.
+    CEA does not optimize for PV size. Instead, all PVs computed by PV potential script are considered.
+    Requires PV potential script to be run beforehand if PV contributions are to be included.
+    PV types are defined in {scenario}\inputs\database\COMPONENTS\CONVERSION\PHOTOVOLTAIC_PANELS.csv.
+pv-type.locator = get_db4_components_conversion_conversion_technology_csv
+pv-type.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
+pv-type.column = code
+pv-type.category = Emission Timeline Detailed Settings
+
 grid-carbon-intensity-dataset-csv =
 grid-carbon-intensity-dataset-csv.type = InputFileParameter
 grid-carbon-intensity-dataset-csv.extensions = csv
