pv embodied emission in yearly result

--- a/cea/default.config
+++ b/cea/default.config
@@ -403,18 +403,19 @@ consider-pv-contributions.type = BooleanParameter
 consider-pv-contributions.help = True to include PV contributions in emission calculations.
 consider-pv-contributions.category = Emission Timeline Detailed Settings
 
-pv-type = 
-pv-type.type = ColumnChoiceParameter
-pv-type.help = Type of PV panels to consider for emission calculations. Leave blank to ignore PV contributions.
+pv-codes = 
+pv-codes.type = ColumnMultiChoiceParameter
+pv-codes.help = Types of PV panels to consider for emission calculations. These types are evaluated separately. 
+    This helps with comparing the emission of each pv type.
     PV panels can help electrical technologies avoid grid electricity consumption, thus reducing emissions caused by grid.
     However, they might have embodied emissions during manufacturing.
     CEA does not optimize for PV size. Instead, all PVs computed by PV potential script are considered.
     Requires PV potential script to be run beforehand if PV contributions are to be included.
     PV types are defined in {scenario}\inputs\database\COMPONENTS\CONVERSION\PHOTOVOLTAIC_PANELS.csv.
-pv-type.locator = get_db4_components_conversion_conversion_technology_csv
-pv-type.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
-pv-type.column = code
-pv-type.category = Emission Timeline Detailed Settings
+pv-codes.locator = get_db4_components_conversion_conversion_technology_csv
+pv-codes.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
+pv-codes.column = code
+pv-codes.category = Emission Timeline Detailed Settings
 
 grid-carbon-intensity-dataset-csv =
 grid-carbon-intensity-dataset-csv.type = InputFileParameter
