rename emission keys to avoid ambiguity: Qhs_sys -> heating Qcs_sys -> cooling Qww_sys -> hot_water E_sys   -> appliances
Also rename demand type name:
electricity -> appliances

--- a/cea/default.config
+++ b/cea/default.config
@@ -1,15 +1,15 @@
 [general]
 project = ~/reference-case-open
 project.type = PathParameter
-project.help = Select the path of the project you're working on.
+project.help = Select the path of the project you are working on.
 
 scenario-name = baseline
 scenario-name.type = ScenarioNameParameter
-scenario-name.help = Select the name of the scenario of the project you're working on.
+scenario-name.help = Select the name of the scenario of the project you are working on.
 
 scenario = {general:project}/{general:scenario-name}
 scenario.type = ScenarioParameter
-scenario.help = Select the scenario you're working on.
+scenario.help = Select the scenario you are working on.
 
 multiprocessing = true
 multiprocessing.type = BooleanParameter
@@ -56,7 +56,7 @@ buildings.category = Customisation
 [streets-helper]
 include-private-streets = true
 include-private-streets.type = BooleanParameter
-include-private-streets.help = True to include private streets. CEA relies on OpenStreetMap's categorisation, which is not always accurate.
+include-private-streets.help = True to include private streets. CEA relies on OpenStreetMaps categorisation, which is not always accurate.
 include-private-streets.category = Customisation
 
 [terrain-helper]
@@ -895,7 +895,7 @@ include-advanced-analytics.help = True to include a collection of advanced usefu
 
 use-cea-acronym-format-column-names = false
 use-cea-acronym-format-column-names.type = BooleanParameter
-use-cea-acronym-format-column-names.help = True to use CEA's acronym-format column names. False as default to use explicit-format metrics as above.
+use-cea-acronym-format-column-names.help = True to use CEAs acronym-format column names. False as default to use explicit-format metrics as above.
 
 use-conditioned-floor-area-for-normalisation = false
 use-conditioned-floor-area-for-normalisation.type = BooleanParameter
@@ -1668,7 +1668,7 @@ resume-file =
 resume-file.type = ResumeFileParameter
 resume-file.extensions = yml
 resume-file.direction = output
-resume-file.help = Path to a file to store information on how to resume a workflow in case it doesn't run through
+resume-file.help = Path to a file to store information on how to resume a workflow in case it does not run through
 resume-file.category = Advanced
 
 trace-input = off
@@ -1888,9 +1888,9 @@ x-to-plot.choices = building, building_faceted_by_months, building_faceted_by_se
 x-to-plot.help = Select the column to plot on the X-axis.
 
 [plots-lifecycle-emissions]
-y-metric-to-plot = operation_heating, operation_hot_water, operation_cooling, operation_electricity
+y-metric-to-plot = operation_heating, operation_hot_water, operation_cooling, operation_appliances
 y-metric-to-plot.type = MultiChoiceParameter
-y-metric-to-plot.choices = operation_heating, operation_hot_water, operation_cooling, operation_electricity, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
+y-metric-to-plot.choices = operation_heating, operation_hot_water, operation_cooling, operation_appliances, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
 y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis. Metrics count all wall types, windows, base, floor (below and above ground).
 
 y-metric-unit = kgCO2e
@@ -1912,7 +1912,7 @@ x-to-plot.help = Select the column to plot on the X-axis.
 [plots-operational-emissions]
 y-metric-to-plot = heating, hot_water, cooling, electricity
 y-metric-to-plot.type = MultiChoiceParameter
-y-metric-to-plot.choices = heating, hot_water, cooling, electricity, heating_NATURALGAS, heating_BIOGAS, heating_SOLAR, heating_DRYBIOMASS, heating_WETBIOMASS, heating_GRID, heating_COAL, heating_WOOD, heating_OIL, heating_HYDROGEN, heating_NONE, hot_water_NATURALGAS, hot_water_BIOGAS, hot_water_SOLAR, hot_water_DRYBIOMASS, hot_water_WETBIOMASS, hot_water_GRID, hot_water_COAL, hot_water_WOOD, hot_water_OIL, hot_water_HYDROGEN,hot_water_NONE, cooling_NATURALGAS, cooling_BIOGAS, cooling_SOLAR, cooling_DRYBIOMASS, cooling_WETBIOMASS, cooling_GRID, cooling_COAL, cooling_WOOD, cooling_OIL, cooling_HYDROGEN, cooling_NONE, electricity_NATURALGAS, electricity_BIOGAS, electricity_SOLAR, electricity_DRYBIOMASS, electricity_WETBIOMASS, electricity_GRID, electricity_COAL, electricity_WOOD, electricity_OIL, electricity_HYDROGEN, electricity_NONE
+y-metric-to-plot.choices = heating, hot_water, cooling, electricity, heating_NATURALGAS, heating_BIOGAS, heating_SOLAR, heating_DRYBIOMASS, heating_WETBIOMASS, heating_GRID, heating_COAL, heating_WOOD, heating_OIL, heating_HYDROGEN, heating_NONE, hot_water_NATURALGAS, hot_water_BIOGAS, hot_water_SOLAR, hot_water_DRYBIOMASS, hot_water_WETBIOMASS, hot_water_GRID, hot_water_COAL, hot_water_WOOD, hot_water_OIL, hot_water_HYDROGEN,hot_water_NONE, cooling_NATURALGAS, cooling_BIOGAS, cooling_SOLAR, cooling_DRYBIOMASS, cooling_WETBIOMASS, cooling_GRID, cooling_COAL, cooling_WOOD, cooling_OIL, cooling_HYDROGEN, cooling_NONE, appliances_NATURALGAS, appliances_BIOGAS, appliances_SOLAR, appliances_DRYBIOMASS, appliances_WETBIOMASS, appliances_GRID, appliances_COAL, appliances_WOOD, appliances_OIL, appliances_HYDROGEN, appliances_NONE
 y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis.
 
 y-metric-unit = kgCO2e
@@ -1937,9 +1937,9 @@ plot-type.type = ChoiceParameter
 plot-type.choices = line_cumulative, line_net_cumulative, shaded_stack_cumulative, shaded_stack_percentage_cumulative
 plot-type.help = Select the type of plot. For plot_type = line_net_cumulative, Net emissions = Operation + Production + Demolition – Biogenic – PV. This net emissions estimate includes operational emissions, embodied emissions from production and demolition, and offsets from on-site PV generation and biogenic carbon stored in long-life bio-based materials. The PV offset assumes 100% self-consumption of electricity using current grid carbon factors. Biogenic carbon is treated as a temporary offset; no end-of-life release is assumed. No future grid decarbonisation or external offsets are assumed.
 
-y-metric-to-plot = operation_heating, operation_hot_water, operation_cooling, operation_electricity, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
+y-metric-to-plot = operation_heating, operation_hot_water, operation_cooling, operation_appliances, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
 y-metric-to-plot.type = MultiChoiceParameter
-y-metric-to-plot.choices = operation_heating, operation_hot_water, operation_cooling, operation_electricity, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
+y-metric-to-plot.choices = operation_heating, operation_hot_water, operation_cooling, operation_appliances, production_wall_ag, production_wall_bg, production_wall_part, production_win_ag, production_roof, production_upperside, production_underside, production_floor, production_base, production_technical_systems, biogenic_wall_ag, biogenic_wall_bg, biogenic_wall_part, biogenic_win_ag, biogenic_roof, biogenic_upperside, biogenic_underside, biogenic_floor, biogenic_base, biogenic_technical_systems, demolition_wall_ag, demolition_wall_bg, demolition_wall_part, demolition_win_ag, demolition_roof, demolition_upperside, demolition_underside, demolition_floor, demolition_base, demolition_technical_systems
 y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis. Metrics count all wall types, windows, base, floor (below and above ground).
 y-metric-to-plot.category = Y-axis settings
 
