--- a/pyproject.toml
+++ b/pyproject.toml
@@ -121,6 +121,7 @@ version = { attr = "cea.__version__" }
 
 [tool.ruff]
 exclude = ["*.ipynb", "external/"]
+extend-exclude = ["*.pyi"]
 lint.ignore = [
     "E741", # ambiguous variable name (l, O, I)
 ]
