--- a/cea/default.config
+++ b/cea/default.config
@@ -1255,6 +1255,10 @@ network-type.type = ChoiceParameter
 network-type.choices = DC, DH
 network-type.help = District Heating (DH) or District Cooling (DC)
 
+buildings =
+buildings.type = BuildingsParameter
+buildings.help = List of buildings included in the district-scale Supply System Optimisation. Leave blank to include all all buildings.
+
 cooling-components = ABSORPTION_CHILLERS, VAPOR_COMPRESSION_CHILLERS, UNITARY_AIR_CONDITIONERS
 cooling-components.type = MultiChoiceParameter
 cooling-components.choices = ABSORPTION_CHILLERS, VAPOR_COMPRESSION_CHILLERS, UNITARY_AIR_CONDITIONERS
