expose demand allowance and priority of PV self consumption to dashboard

--- a/cea/default.config
+++ b/cea/default.config
@@ -401,21 +401,37 @@ buildings.category = Emission Timeline Detailed Settings
 consider-pv-contributions = false
 consider-pv-contributions.type = BooleanParameter
 consider-pv-contributions.help = True to include PV contributions in emission calculations.
-consider-pv-contributions.category = Emission Timeline Detailed Settings
+consider-pv-contributions.category = PV Contributions to Emission Calculations
 
 pv-codes = 
 pv-codes.type = ColumnMultiChoiceParameter
-pv-codes.help = Types of PV panels to consider for emission calculations. These types are evaluated separately. 
-    This helps with comparing the emission of each pv type.
+pv-codes.help = Codes of PV panels to consider for emission calculations. These codes are evaluated separately. 
+    This helps with comparing the emission of each pv code.
     PV panels can help electrical technologies avoid grid electricity consumption, thus reducing emissions caused by grid.
     However, they might have embodied emissions during manufacturing.
     CEA does not optimize for PV size. Instead, all PVs computed by PV potential script are considered.
     Requires PV potential script to be run beforehand if PV contributions are to be included.
-    PV types are defined in {scenario}\inputs\database\COMPONENTS\CONVERSION\PHOTOVOLTAIC_PANELS.csv.
+    PV codes are defined in {scenario}\inputs\database\COMPONENTS\CONVERSION\PHOTOVOLTAIC_PANELS.csv.
 pv-codes.locator = get_db4_components_conversion_conversion_technology_csv
 pv-codes.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
 pv-codes.column = code
-pv-codes.category = Emission Timeline Detailed Settings
+pv-codes.category = PV Contributions to Emission Calculations
+
+pv-offset-allowance = E_sys, Qcs_sys, Qhs_sys, Qww_sys
+pv-offset-allowance.type = MultiChoiceParameter
+pv-offset-allowance.choices = E_sys, Qcs_sys, Qhs_sys, Qww_sys
+pv-offset-allowance.help = Building energy demands that PV electricity generation is allowed to offset.
+    If none or all demands are selected, PV will provide electricity to electrical technologies
+    according to the following priority defined in pv-offset-priority.
+pv-offset-allowance.category = PV Contributions to Emission Calculations
+
+pv-offset-priority = E_sys, Qcs_sys, Qhs_sys, Qww_sys
+pv-offset-priority.type = MultiChoiceParameter
+pv-offset-priority.choices = E_sys, Qcs_sys, Qhs_sys, Qww_sys
+pv-offset-priority.help = Priority order for allocating PV electricity generation to offset building energy demands.
+    If a demand is not selected here but in pv-offset-allowance, it will be allocated after all selected demands are met.
+    By default, PV electricity generation is first allocated to E_sys, then Qcs_sys, Qhs_sys, and finally Qww_sys.
+pv-offset-priority.category = PV Contributions to Emission Calculations
 
 grid-carbon-intensity-dataset-csv =
 grid-carbon-intensity-dataset-csv.type = InputFileParameter
