--- a/cea/default.config
+++ b/cea/default.config
@@ -437,7 +437,7 @@ grid-carbon-intensity-dataset-csv =
 grid-carbon-intensity-dataset-csv.type = InputFileParameter
 grid-carbon-intensity-dataset-csv.extensions = csv
 grid-carbon-intensity-dataset-csv.nullable = true
-grid-carbon-intensity-dataset-csv.help = Path to CSV file containing hourly grid carbon intensity data with a column for carbon intensity in gCO₂e/kWh.
+grid-carbon-intensity-dataset-csv.help = Path to CSV file containing hourly grid carbon intensity data with a column for carbon intensity in gCO2e/kWh.
     Verify units carefully to ensure reliable results.
     Leave blank to use default data from CEA Database (Components-feedstocks > GRID).
 grid-carbon-intensity-dataset-csv.category = Customise Hourly Grid Emission Data
@@ -445,7 +445,7 @@ grid-carbon-intensity-dataset-csv.category = Customise Hourly Grid Emission Data
 csv-carbon-intensity-column-name =
 csv-carbon-intensity-column-name.type = StringParameter
 csv-carbon-intensity-column-name.nullable = true
-csv-carbon-intensity-column-name.help = Column name in the CSV file containing carbon intensity data in gCO₂e/kWh.
+csv-carbon-intensity-column-name.help = Column name in the CSV file containing carbon intensity data in gCO2e/kWh.
     Required if grid-carbon-intensity-dataset-csv is provided.
 csv-carbon-intensity-column-name.category = Customise Hourly Grid Emission Data
 
@@ -1912,7 +1912,7 @@ y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis. Metrics cou
 y-metric-unit = kgCO2e
 y-metric-unit.type = ChoiceParameter
 y-metric-unit.choices = tonCO2e, kgCO2e, gCO2e
-y-metric-unit.help = Select the unit of the metric to plot for the Y-axis - CO₂e.
+y-metric-unit.help = Select the unit of the metric to plot for the Y-axis - CO2e.
 y-metric-unit.category = Y-axis settings
 
 y-normalised-by = gross_floor_area
@@ -1934,7 +1934,7 @@ y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis.
 y-metric-unit = kgCO2e
 y-metric-unit.type = ChoiceParameter
 y-metric-unit.choices = tonCO2e, kgCO2e, gCO2e
-y-metric-unit.help = Select the unit of the metric to plot for the Y-axis - CO₂e.
+y-metric-unit.help = Select the unit of the metric to plot for the Y-axis - CO2e.
 y-metric-unit.category = Y-axis settings
 
 y-normalised-by = gross_floor_area
@@ -1962,7 +1962,7 @@ y-metric-to-plot.category = Y-axis settings
 y-metric-unit = kgCO2e
 y-metric-unit.type = ChoiceParameter
 y-metric-unit.choices = tonCO2e, kgCO2e, gCO2e
-y-metric-unit.help = Select the unit of the metric to plot for the Y-axis - CO₂e.
+y-metric-unit.help = Select the unit of the metric to plot for the Y-axis - CO2e.
 y-metric-unit.category = Y-axis settings
 
 y-normalised-by = gross_floor_area
