network part 1 honors district level connection in supply.csv

--- a/cea/default.config
+++ b/cea/default.config
@@ -1585,7 +1585,7 @@ network-type.help = Type of district network: "DH" (district heating), or "DC" (
 
 connected-buildings =
 connected-buildings.type = BuildingsParameter
-connected-buildings.help = List of buildings/customers to connect (blank if all buildings connected).
+connected-buildings.help = List of buildings/customers to connect. If left blank, buildings with scale=DISTRICT in supply.csv will be auto-detected. If no district buildings found, all buildings will be connected (default behaviour).
 
 plant-buildings =
 plant-buildings.type = ListParameter
