--- a/.github/workflows/update-config-stubs.yml
+++ b/.github/workflows/update-config-stubs.yml
@@ -26,19 +26,16 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Setup pixi
+        uses: prefix-dev/setup-pixi@v0.8.14
         with:
-          python-version: '3.11'
+          cache: true
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install configparser
+      - name: Install CEA
+        run: pixi run pip install .
 
       - name: Generate config.pyi
-        run: |
-          python -m cea.utilities.config_type_generator
+        run: pixi run python -m cea.utilities.config_type_generator
 
       - name: Check for changes
         id: check_changes
