--- a/cea/default.config
+++ b/cea/default.config
@@ -1420,6 +1420,27 @@ network-lifetime.type = RealParameter
 network-lifetime.help = Economic lifetime of the network in years
 network-lifetime.category = Network Model Parameters
 
+edges-shp =
+edges-shp.type = FileParameter
+edges-shp.nullable = true
+edges-shp.extensions = shp
+edges-shp.help = Path to the shapefile containing the network edges. Ensure CEA Format.
+edges-shp.category = Base Case Network Layout
+
+nodes-shp =
+nodes-shp.type = FileParameter
+nodes-shp.nullable = true
+nodes-shp.extensions = shp
+nodes-shp.help = Path to the shapefile containing the network nodes. Ensure CEA Format.
+nodes-shp.category = Base Case Network Layout
+
+network-geojson =
+network-geojson.type = FileParameter
+network-geojson.nullable = true
+network-geojson.extensions = geojson
+network-geojson.help = Path to the geojson file containing the network layout. Ensure CEA Format.
+network-geojson.category = Base Case Network Layout
+
 [plots]
 buildings =
 buildings.type = BuildingsParameter
