base case network layout exposed

--- a/cea/default.config
+++ b/cea/default.config
@@ -1420,26 +1420,26 @@ network-lifetime.type = RealParameter
 network-lifetime.help = Economic lifetime of the network in years
 network-lifetime.category = Network Model Parameters
 
-edges-shp =
-edges-shp.type = FileParameter
-edges-shp.nullable = true
-edges-shp.extensions = shp
-edges-shp.help = Path to the shapefile containing the network edges. Ensure CEA Format.
-edges-shp.category = Base Case Network Layout
+edges-shp-path =
+edges-shp-path.type = FileParameter
+edges-shp-path.nullable = true
+edges-shp-path.extensions = shp
+edges-shp-path.help = Path to shapefile with network edges (LineString geometry). Required attributes: 'name' (str), 'type_mat' (str). Must be used with 'nodes-shp-path'. Do NOT use with 'network-geojson-path' (mutually exclusive). If blank, CEA will generate the network layout automatically.
+edges-shp-path.category = Base Case Network Layout
 
-nodes-shp =
-nodes-shp.type = FileParameter
-nodes-shp.nullable = true
-nodes-shp.extensions = shp
-nodes-shp.help = Path to the shapefile containing the network nodes. Ensure CEA Format.
-nodes-shp.category = Base Case Network Layout
+nodes-shp-path =
+nodes-shp-path.type = FileParameter
+nodes-shp-path.nullable = true
+nodes-shp-path.extensions = shp
+nodes-shp-path.help = Path to shapefile with network nodes (Point geometry). Required attributes: 'building' (str) matching building names. Nodes must be within building footprints. Must be used with 'edges-shp-path'. Do NOT use with 'network-geojson-path' (mutually exclusive). If blank, CEA will generate the network layout automatically.
+nodes-shp-path.category = Base Case Network Layout
 
-network-geojson =
-network-geojson.type = FileParameter
-network-geojson.nullable = true
-network-geojson.extensions = geojson
-network-geojson.help = Path to the geojson file containing the network layout. Ensure CEA Format.
-network-geojson.category = Base Case Network Layout
+network-geojson-path =
+network-geojson-path.type = FileParameter
+network-geojson-path.nullable = true
+network-geojson-path.extensions = geojson
+network-geojson-path.help = Path to GeoJSON file with combined nodes (Points) and edges (LineStrings). Node features require 'building' attribute (str). Edge features require 'type_mat' attribute (str). Do NOT use with 'edges-shp-path' or 'nodes-shp-path' (mutually exclusive). If blank, CEA will generate the network layout automatically.
+network-geojson-path.category = Base Case Network Layout
 
 [plots]
 buildings =
