--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -316,7 +316,7 @@ Energy Supply System Optimisation:
                  thermal-network-optimization]
 
   - name: decentralized
-    label: "Suppy System Optimisation: building-scale"
+    label: "Supply System Optimisation: building-scale"
     short_description: Optimise decentralised energy supply systems
     description: This Feature optimises energy supply systems for decentralised operation.
     interfaces: [cli, dashboard]
@@ -326,7 +326,7 @@ Energy Supply System Optimisation:
       - [get_total_demand]
 
   - name: optimization-new
-    label: "Suppy System Optimisation: district-scale"
+    label: "Supply System Optimisation: district-scale"
     short_description: Optimise centralised energy supply systems
     description: This Feature optimises energy supply systems for centralised operation.
     interfaces: [cli, dashboard]
