plant = type, not building

--- a/cea/default.config
+++ b/cea/default.config
@@ -1431,14 +1431,14 @@ nodes-shp-path =
 nodes-shp-path.type = FileParameter
 nodes-shp-path.nullable = true
 nodes-shp-path.extensions = shp
-nodes-shp-path.help = Path to shapefile with network nodes (Point geometry). Required attributes: 'building' (str) matching building names. Nodes must be within building footprints. Must be used with 'edges-shp-path'. Do NOT use with 'network-geojson-path' (mutually exclusive). If blank, CEA will generate the network layout automatically.
+nodes-shp-path.help = Path to shapefile with network nodes (Point geometry). Required attributes: 'building' (str) matching building names, 'type' (str) node type (CONSUMER/PLANT/NONE). Nodes must be within building footprints. Must be used with 'edges-shp-path'. Do NOT use with 'network-geojson-path' (mutually exclusive). If blank, CEA will generate the network layout automatically.
 nodes-shp-path.category = Base Case Network Layout
 
 network-geojson-path =
 network-geojson-path.type = FileParameter
 network-geojson-path.nullable = true
 network-geojson-path.extensions = geojson
-network-geojson-path.help = Path to GeoJSON file with combined nodes (Points) and edges (LineStrings). Node features require 'building' attribute (str). Edge features require 'type_mat' attribute (str). Do NOT use with 'edges-shp-path' or 'nodes-shp-path' (mutually exclusive). If blank, CEA will generate the network layout automatically.
+network-geojson-path.help = Path to GeoJSON file with combined nodes (Points) and edges (LineStrings). Node features require 'building' (str) and 'type' (str) attributes. Edge features require 'type_mat' attribute (str). Do NOT use with 'edges-shp-path' or 'nodes-shp-path' (mutually exclusive). If blank, CEA will generate the network layout automatically.
 network-geojson-path.category = Base Case Network Layout
 
 [plots]
