--- a/cea/default.config
+++ b/cea/default.config
@@ -1608,6 +1608,10 @@ connected-buildings =
 connected-buildings.type = BuildingsParameter
 connected-buildings.help = List of buildings/customers to connect (blank if all buildings connected).
 
+overwrite-supply-settings = false
+overwrite-supply-settings.type = BooleanParameter
+overwrite-supply-settings.help = When False, determines connected buildings from supply.csv (buildings with district heating/cooling systems). When True, uses 'connected-buildings' parameter instead (for what-if scenarios). If 'connected-buildings' is blank when True, includes all buildings with heating/cooling demand.
+
 plant-buildings =
 plant-buildings.type = ListParameter
 plant-buildings.help = List of buildings where a plant is located (blank for plant to be created automatically at the anchor load).
