--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -232,8 +232,10 @@ Thermal Network Design:
 
   - name: network-layout
     label: "Thermal Network Part 1: layout"
-    short_description: Create thermal network piping layout using minimum spanning tree
-    description: This Feature creates a thermal network's piping layout with the minimum spanning tree following the streets geometry.
+    short_description: Create or validate thermal network piping layout
+    description: |
+      This Feature creates a thermal network's piping layout using minimum spanning tree algorithm following streets geometry, or validates and processes user-provided network layouts (shapefiles or GeoJSON).
+
     interfaces: [cli, dashboard]
     module: cea.technologies.network_layout.main
     parameters: ['general:scenario', network-layout]
