--- a/cea/default.config
+++ b/cea/default.config
@@ -1604,7 +1604,7 @@ network-type.type = ChoiceParameter
 network-type.choices = DH, DC
 network-type.help = Type of district network: DH = district heating, or DC = district cooling
 
-overwrite-supply-settings = false
+overwrite-supply-settings = true
 overwrite-supply-settings.type = BooleanParameter
 overwrite-supply-settings.help = True to use 'connected-buildings' parameter instead of buildings defined in Building Properties/Supply.
 
@@ -1612,10 +1612,13 @@ connected-buildings =
 connected-buildings.type = BuildingsParameter
 connected-buildings.help = List of buildings to connect. Ignored if 'overwrite-supply-settings' is False. Leave blank to include all buildings.
 
+consider-only-buildings-with-demand = true
+consider-only-buildings-with-demand.type = BooleanParameter
+consider-only-buildings-with-demand.help = True to only consider buildings with heating/cooling demand during CEA piping layout auto-generation. Ignored if User-Defined Network is provided.
+
 plant-buildings =
 plant-buildings.type = ListParameter
 plant-buildings.help = List of buildings where a plant is located (blank for plant to be created automatically at the anchor load).
-possible-plant-sites.category = Advanced
 
 # pipe-diameter = 150
 # pipe-diameter.type = IntegerParameter
@@ -1632,10 +1635,6 @@ possible-plant-sites.category = Advanced
 # allow-looped-networks.type = BooleanParameter
 # allow-looped-networks.help = True if network loops should be created.
 # create-plant.category = Advanced
-
-consider-only-buildings-with-demand = true
-consider-only-buildings-with-demand.type = BooleanParameter
-consider-only-buildings-with-demand.help = True to consider buildings with energy demand should be considered.
 
 user-edges-shp-path =
 user-edges-shp-path.type = FileParameter
