--- a/cea/default.config
+++ b/cea/default.config
@@ -1616,9 +1616,10 @@ consider-only-buildings-with-demand = true
 consider-only-buildings-with-demand.type = BooleanParameter
 consider-only-buildings-with-demand.help = True to only consider buildings with heating/cooling demand during CEA piping layout auto-generation. Ignored if User-Defined Network is provided.
 
-plant-buildings =
-plant-buildings.type = ListParameter
-plant-buildings.help = List of buildings where a plant is located (blank for plant to be created automatically at the anchor load).
+plant-building =
+plant-building.type = StringParameter
+plant-building.nullable = true
+plant-building.help = Building name to use as anchor for plant placement. If multiple buildings are provided (comma-separated), only the first one will be used. Plant will be placed at the closest network junction to this building. Leave blank to place plant at the building with highest demand (anchor load). Ignored when User-Defined Network is provided.
 
 # pipe-diameter = 150
 # pipe-diameter.type = IntegerParameter
