--- a/cea/default.config
+++ b/cea/default.config
@@ -1614,12 +1614,13 @@ connected-buildings.help = List of buildings to connect. Ignored if 'overwrite-s
 
 consider-only-buildings-with-demand = true
 consider-only-buildings-with-demand.type = BooleanParameter
-consider-only-buildings-with-demand.help = True to only consider buildings with heating/cooling demand during CEA piping layout auto-generation. Ignored if User-Defined Network is provided.
+consider-only-buildings-with-demand.help = True to only consider buildings with heating/cooling demand during CEA piping layout auto-generation. Ignored if User-Defined Layout is provided.
+consider-only-buildings-with-demand.category = Piping Layout Auto-Generation Parameters
 
 plant-building =
 plant-building.type = StringParameter
 plant-building.nullable = true
-plant-building.help = Building name to use as anchor for plant placement. If multiple buildings are provided (comma-separated), only the first one will be used. Plant will be placed at the closest network junction to this building. Leave blank to place plant at the building with highest demand (anchor load). Ignored when User-Defined Network is provided.
+plant-building.help = Building name to use as anchor for plant placement. Plant will be placed near the closest junction node to this building. Leave blank to use building with highest demand (anchor load). If PLANT node is missing in User-Defined Network, it will be auto-created.
 
 # pipe-diameter = 150
 # pipe-diameter.type = IntegerParameter
@@ -1642,21 +1643,21 @@ user-edges-shp-path.type = FileParameter
 user-edges-shp-path.nullable = true
 user-edges-shp-path.extensions = shp
 user-edges-shp-path.help = Path to user-defined edge shapefile. If provided, bypasses automatic layout generation. Must be used with 'user-nodes-shp-path'. Do NOT use with 'user-network-geojson-path' (mutually exclusive).
-user-edges-shp-path.category = User-Defined Network
+user-edges-shp-path.category = User-Defined Layout
 
 user-nodes-shp-path =
 user-nodes-shp-path.type = FileParameter
 user-nodes-shp-path.nullable = true
 user-nodes-shp-path.extensions = shp
 user-nodes-shp-path.help = Path to user-defined node shapefile. Required attributes: 'building' (str) matching building names, 'type' (str) node type (CONSUMER/PLANT/NONE). If provided, bypasses automatic layout generation. Must be used with 'user-edges-shp-path'. Do NOT use with 'user-network-geojson-path' (mutually exclusive).
-user-nodes-shp-path.category = User-Defined Network
+user-nodes-shp-path.category = User-Defined Layout
 
 user-network-geojson-path =
 user-network-geojson-path.type = FileParameter
 user-network-geojson-path.nullable = true
 user-network-geojson-path.extensions = geojson
 user-network-geojson-path.help = Path to user-defined network GeoJSON file with combined nodes (Points) and edges (LineStrings). Node features require 'building' (str) and 'type' (str) attributes. Edge features require 'type_mat' attribute (str). Do NOT use with 'user-edges-shp-path' or 'user-nodes-shp-path' (mutually exclusive).
-user-network-geojson-path.category = User-Defined Network
+user-network-geojson-path.category = User-Defined Layout
 
 algorithm = kou
 algorithm.type = ChoiceParameter
