--- a/cea/default.config
+++ b/cea/default.config
@@ -1615,7 +1615,7 @@ connected-buildings.help = List of buildings to connect. Ignored if 'overwrite-s
 consider-only-buildings-with-demand = true
 consider-only-buildings-with-demand.type = BooleanParameter
 consider-only-buildings-with-demand.help = True to only consider buildings with heating/cooling demand during CEA piping layout auto-generation. Ignored if User-Defined Layout is provided.
-consider-only-buildings-with-demand.category = Piping Layout Auto-Generation Parameters
+consider-only-buildings-with-demand.category = Auto-Generated Layout Parameters
 
 plant-building =
 plant-building.type = StringParameter
@@ -1638,26 +1638,26 @@ plant-building.help = Building name to use as anchor for plant placement. Plant 
 # allow-looped-networks.help = True if network loops should be created.
 # create-plant.category = Advanced
 
-user-edges-shp-path =
-user-edges-shp-path.type = FileParameter
-user-edges-shp-path.nullable = true
-user-edges-shp-path.extensions = shp
-user-edges-shp-path.help = Path to user-defined edge shapefile. If provided, bypasses automatic layout generation. Must be used with 'user-nodes-shp-path'. Do NOT use with 'user-network-geojson-path' (mutually exclusive).
-user-edges-shp-path.category = User-Defined Layout
+edges-shp-path =
+edges-shp-path.type = FileParameter
+edges-shp-path.nullable = true
+edges-shp-path.extensions = shp
+edges-shp-path.help = Path to user-defined edge shapefile. If provided, bypasses automatic layout generation. Must be used with 'user-nodes-shp-path'. Do NOT use with 'user-network-geojson-path' (mutually exclusive).
+edges-shp-path.category = User-Defined Layout
 
-user-nodes-shp-path =
-user-nodes-shp-path.type = FileParameter
-user-nodes-shp-path.nullable = true
-user-nodes-shp-path.extensions = shp
-user-nodes-shp-path.help = Path to user-defined node shapefile. Required attributes: 'building' (str) matching building names, 'type' (str) node type (CONSUMER/PLANT/NONE). If provided, bypasses automatic layout generation. Must be used with 'user-edges-shp-path'. Do NOT use with 'user-network-geojson-path' (mutually exclusive).
-user-nodes-shp-path.category = User-Defined Layout
+nodes-shp-path =
+nodes-shp-path.type = FileParameter
+nodes-shp-path.nullable = true
+nodes-shp-path.extensions = shp
+nodes-shp-path.help = Path to user-defined node shapefile. Required attributes: 'building' (str) matching building names, 'type' (str) node type (CONSUMER/PLANT/NONE). If provided, bypasses automatic layout generation. Must be used with 'user-edges-shp-path'. Do NOT use with 'user-network-geojson-path' (mutually exclusive).
+nodes-shp-path.category = User-Defined Layout
 
-user-network-geojson-path =
-user-network-geojson-path.type = FileParameter
-user-network-geojson-path.nullable = true
-user-network-geojson-path.extensions = geojson
-user-network-geojson-path.help = Path to user-defined network GeoJSON file with combined nodes (Points) and edges (LineStrings). Node features require 'building' (str) and 'type' (str) attributes. Edge features require 'type_mat' attribute (str). Do NOT use with 'user-edges-shp-path' or 'user-nodes-shp-path' (mutually exclusive).
-user-network-geojson-path.category = User-Defined Layout
+network-geojson-path =
+network-geojson-path.type = FileParameter
+network-geojson-path.nullable = true
+network-geojson-path.extensions = geojson
+network-geojson-path.help = Path to user-defined network GeoJSON file with combined nodes (Points) and edges (LineStrings). Node features require 'building' (str) and 'type' (str) attributes. Edge features require 'type_mat' attribute (str). Do NOT use with 'user-edges-shp-path' or 'user-nodes-shp-path' (mutually exclusive).
+network-geojson-path.category = User-Defined Layout
 
 algorithm = kou
 algorithm.type = ChoiceParameter
