--- a/cea/default.config
+++ b/cea/default.config
@@ -1604,6 +1604,11 @@ network-type.type = ChoiceParameter
 network-type.choices = DH, DC
 network-type.help = Type of district network: DH = district heating, or DC = district cooling
 
+network-name =
+network-name.type = NetworkLayoutNameParameter
+network-name.nullable = true
+network-name.help = Optional name for this network layout variant. Leave blank to auto-generate timestamp (e.g., '20250107_143022'). Use descriptive names for what-if scenarios (e.g., 'all-connected').
+
 overwrite-supply-settings = true
 overwrite-supply-settings.type = BooleanParameter
 overwrite-supply-settings.help = True to use 'connected-buildings' parameter instead of buildings defined in Building Properties/Supply.
@@ -1611,12 +1616,6 @@ overwrite-supply-settings.help = True to use 'connected-buildings' parameter ins
 connected-buildings =
 connected-buildings.type = BuildingsParameter
 connected-buildings.help = List of buildings to connect. Ignored if 'overwrite-supply-settings' is False. Leave blank to include all buildings.
-
-consider-only-buildings-with-demand = true
-consider-only-buildings-with-demand.type = BooleanParameter
-consider-only-buildings-with-demand.help = True to only consider buildings with heating/cooling demand during CEA piping layout auto-generation. Ignored if User-Defined Layout is provided.
-consider-only-buildings-with-demand.category = Auto-Generated Layout Parameters
-
 plant-building =
 plant-building.type = StringParameter
 plant-building.nullable = true
@@ -1658,6 +1657,11 @@ network-geojson-path.nullable = true
 network-geojson-path.extensions = geojson
 network-geojson-path.help = Path to user-defined network GeoJSON file with combined nodes (Points) and edges (LineStrings). Node features require 'building' (str) and 'type' (str) attributes. Edge features require 'type_mat' attribute (str). Do NOT use with 'user-edges-shp-path' or 'user-nodes-shp-path' (mutually exclusive).
 network-geojson-path.category = User-Defined Layout
+
+consider-only-buildings-with-demand = true
+consider-only-buildings-with-demand.type = BooleanParameter
+consider-only-buildings-with-demand.help = True to only consider buildings with heating/cooling demand during CEA piping layout auto-generation. Ignored if User-Defined Layout is provided.
+consider-only-buildings-with-demand.category = Auto-Generated Layout Parameters
 
 algorithm = kou
 algorithm.type = ChoiceParameter
