--- a/cea/default.config
+++ b/cea/default.config
@@ -946,6 +946,10 @@ network-type.type = ChoiceParameter
 network-type.choices = DH, DC
 network-type.help = Type of district network to be simulated: "DH" (district heating) or "DC" (district cooling).
 
+network-name =
+network-name.type = NetworkLayoutChoiceParameter
+network-name.help = Select an existing network layout to simulate. Networks are created by the 'network-layout' script. Dropdown lists available networks for the selected network type.
+
 network-model = simplified
 network-model.type = ChoiceParameter
 network-model.choices = simplified, detailed
