update operational emission timeline field names in plots. Generate field names dynamically from result_summary.py and import to other files

--- a/cea/default.config
+++ b/cea/default.config
@@ -1930,9 +1930,9 @@ x-to-plot.choices = building, building_faceted_by_construction_type, building_fa
 x-to-plot.help = Select the column to plot on the X-axis.
 
 [plots-operational-emissions]
-y-metric-to-plot = heating, hot_water, cooling, electricity
+y-metric-to-plot = Qhs_sys, Qww_sys, Qcs_sys, E_sys
 y-metric-to-plot.type = MultiChoiceParameter
-y-metric-to-plot.choices = heating, hot_water, cooling, electricity, heating_NATURALGAS, heating_BIOGAS, heating_SOLAR, heating_DRYBIOMASS, heating_WETBIOMASS, heating_GRID, heating_COAL, heating_WOOD, heating_OIL, heating_HYDROGEN, heating_NONE, hot_water_NATURALGAS, hot_water_BIOGAS, hot_water_SOLAR, hot_water_DRYBIOMASS, hot_water_WETBIOMASS, hot_water_GRID, hot_water_COAL, hot_water_WOOD, hot_water_OIL, hot_water_HYDROGEN,hot_water_NONE, cooling_NATURALGAS, cooling_BIOGAS, cooling_SOLAR, cooling_DRYBIOMASS, cooling_WETBIOMASS, cooling_GRID, cooling_COAL, cooling_WOOD, cooling_OIL, cooling_HYDROGEN, cooling_NONE, appliances_NATURALGAS, appliances_BIOGAS, appliances_SOLAR, appliances_DRYBIOMASS, appliances_WETBIOMASS, appliances_GRID, appliances_COAL, appliances_WOOD, appliances_OIL, appliances_HYDROGEN, appliances_NONE
+y-metric-to-plot.choices = Qhs_sys, Qww_sys, Qcs_sys, E_sys, Qhs_sys_NATURALGAS, Qhs_sys_BIOGAS, Qhs_sys_SOLAR, Qhs_sys_DRYBIOMASS, Qhs_sys_WETBIOMASS, Qhs_sys_GRID, Qhs_sys_COAL, Qhs_sys_WOOD, Qhs_sys_OIL, Qhs_sys_HYDROGEN, Qhs_sys_NONE, Qww_sys_NATURALGAS, Qww_sys_BIOGAS, Qww_sys_SOLAR, Qww_sys_DRYBIOMASS, Qww_sys_WETBIOMASS, Qww_sys_GRID, Qww_sys_COAL, Qww_sys_WOOD, Qww_sys_OIL, Qww_sys_HYDROGEN, Qww_sys_NONE, Qcs_sys_NATURALGAS, Qcs_sys_BIOGAS, Qcs_sys_SOLAR, Qcs_sys_DRYBIOMASS, Qcs_sys_WETBIOMASS, Qcs_sys_GRID, Qcs_sys_COAL, Qcs_sys_WOOD, Qcs_sys_OIL, Qcs_sys_HYDROGEN, Qcs_sys_NONE, E_sys_NATURALGAS, E_sys_BIOGAS, E_sys_SOLAR, E_sys_DRYBIOMASS, E_sys_WETBIOMASS, E_sys_GRID, E_sys_COAL, E_sys_WOOD, E_sys_OIL, E_sys_HYDROGEN, E_sys_NONE
 y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis.
 
 y-metric-unit = kgCO2e
